# product-sales

./: .gitignore  README.md  docker-compose.yml
auth-service/: Dockerfile  pyproject.toml  requirements.txt
auth-service/manifests/: auth-deploy.yaml  configmap.yaml  secret.yaml
auth-service/src/: server.py
auth-service/src/database/: database.py
auth-service/src/model/: model.py
auth-service/src/schema/: schema.py
postgres/: init.sql
